# JustInTime-CLIENT

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  supabase_schema.sql  test.json
cmake/: copy_if_exists.cmake
dashboard-go/: go.mod
dashboard-go/cmd/dashboard/: main.go
dashboard-go/internal/autostart/: autostart_other.go  autostart_windows.go
dashboard-go/internal/dashsettings/: dashsettings.go
dashboard-go/internal/i18n/: i18n.go
dashboard-go/internal/server/: server.go
dashboard-go/internal/server/web/static/: style.css
dashboard-go/internal/server/web/static/js/: dashboard.js
dashboard-go/internal/server/web/templates/: login.html
dashboard-go/internal/sysstats/: sysstats.go
dashboard-go/internal/tray/: tray_other.go
dashboard/static/js/: dashboard.js
dashboard/static/scss/: main.scss
dashboard/templates/: report_print.html
doc/: ERROR CODE TABLE.txt
include/: activity.h  auth.h  backup.h  config.h  database.h  device.h  error_codes.h  jsonutil.h  logindialog.h  network.h  remoteview.h  remoteviewdialog.h  settings.h  settingsdialog.h  supabasesetupdialog.h  sync.h  trayicon.h  ui_dialog.h
include/agent/: parentlinkdialog.h  settingsdialog.h  sync.h  trayicon.h  updatechecker.h
include/core/: activity.h
include/parent/: parentdialog.h
include/shared/: applimits.h  config.h  database.h  jsonutil.h  network.h  parentlink.h  restclient.h  settings.h
legacy/dashboard/: config.py  dashboard_settings.py  supabase_client.py
legacy/dashboard-go/: README.md  go.sum
legacy/dashboard-go/internal/cloud/: cloud.go
legacy/dashboard-go/internal/config/: config.go
legacy/dashboard-go/internal/dashsession/: dashsession.go  dashsession_other.go  dashsession_windows.go
legacy/dashboard-go/internal/localdb/: localdb.go
legacy/dashboard-go/internal/server/web/templates/: index.html  report_print.html  settings.html
legacy/dashboard-go/internal/tray/: tray_windows.go
legacy/dashboard-go/migrations/: 002_device_messages.sql
legacy/dashboard/static/: style.css
legacy/dashboard/templates/: base.html
legacy/include/: activity.h  auth.h  config.h  device.h  jsonutil.h  tray.h  trayicon.h
legacy/installer/: JustInTime.nsi  LICENSE.txt
legacy/src/: activity.c  auth.c  backup.c  database.c  jsonutil.c  logindialog.cpp  main.cpp  network.c  remoteview.c  remoteviewdialog.cpp  settingsdialog.cpp  supabasesetupdialog.cpp
local_dashboard/html/css/: animation.css  dashboard.css  layout.css  reset.css  style.css  variables.css  widget.css
local_dashboard/html/templates/: base.html  dashboard.html
local_dashboard/html/templates/widgets/: cpu.html  disk.html  logs.html  memory.html  network.html  performance.html  process.html
local_dashboard/python/: app.py
local_dashboard/scss/: style.scss
local_dashboard/scss/abstracts/: _breakpoints.scss  _colors.scss  _functions.scss  _mixins.scss  _variables.scss
local_dashboard/scss/base/: _animation.scss  _global.scss  _reset.scss  _typograhpy.scss  _utilities.scss  scrollbar.scss
local_dashboard/scss/components/: _widget.scss
local_dashboard/scss/layout/: _app.scss  _content.scss  _dashboardgrid.scss  _footer.scss  _grid.scss  _sidebar.scss  _topbar.scss
local_dashboard/templates/: base.html
local_dashboard/templates/components/: stat_card.html  widget.html
local_dashboard/templates/layout/: footer.html  sidebar.html  topbar.html
local_dashboard/templates/pages/: dashboard.html
local_dashboard/templates/widgets/: quick_stats.html
migrations/: 004_parent_links.sql
sql/: supabase_schema.sql
sql/migrations/: 003_app_releases.sql
src/: activity.c  auth.c  backup.c  database.c  device.c  main.c  main.cpp  network.c  remoteview.c  settings.c  sync.c  tray.c  trayicon.cpp  trayicon.h  ui_dialog.c  updatechecker.cpp
src/agent/: logindialog.cpp  main.cpp  parentlinkdialog.cpp  remoteview.c  remoteviewdialog.cpp  settingsdialog.cpp  supabasesetupdialog.cpp  sync.c  trayicon.cpp  updatechecker.cpp
src/core/: activity.c
src/parent/: parentdialog.cpp
src/shared/: applimits.c  auth.c  backup.c  database.c  device.c  jsonutil.c  network.c  parentlink.c  restclient.c  settings.c
supabase/.temp/: linked-project.json
supabase/functions/sync-activity/: index.ts
